Bug 310770 - Default value for the "autostart" setting of "Service-nepomukfileindexer" is wrong
Summary: Default value for the "autostart" setting of "Service-nepomukfileindexer" is ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-27 16:24 UTC by Frank Reininghaus
Modified: 2012-11-27 16:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10 Beta 2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2012-11-27 16:24:44 UTC
This causes the problem that the "Recently Accessed" entries are not shown in the Places Panel in a default installation. See https://git.reviewboard.kde.org/r/107464/ for details. We have a fix for that thanks to Luc Menut, I'll commit it soon.

Reproducible: Always
Comment 1 Frank Reininghaus 2012-11-27 16:34:55 UTC
Git commit 530c743a89bb5366ff9b6f8be1d7a37f23b46880 by Frank Reininghaus, on behalf of Luc Menut.
Committed on 27/11/2012 at 17:32.
Pushed by freininghaus into branch 'master'.

Use correct value for autostart setting of Service-nepomukfileindexer

Fixes the problem that the "Recently accessed" entries in the Places
Panel might not be shown when using the default setup.
FIXED-IN: 4.10 Beta 2
REVIEW: 107464

M  +1    -1    dolphin/src/panels/places/placesitemmodel.cpp

http://commits.kde.org/kde-baseapps/530c743a89bb5366ff9b6f8be1d7a37f23b46880