Use correct value for autostart setting of Service-nepomukfileindexer

Fixes the problem that the "Recently accessed" entries in the Places
Panel might not be shown when using the default setup.

BUG: 310770
FIXED-IN: 4.10 Beta 2
REVIEW: 107464